[MODIF] modification de la vue + tests

--- a/code/resource/Salle.fxml
+++ b/code/resource/Salle.fxml
@@ -5,20 +5,32 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import javafx.scene.text.Text?>
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.Salle"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.geometry.Insets?>
 
-        <center>
-            <VBox>
-                <Text> Bienvenue !</Text>
-                <Button fx:id="bonus" text="Accéder à la page de bonus" onAction="#bonus"/>
-                <Button fx:id="defaite" text="Abandonner" onAction="#defaite"/>
-            </VBox>
-        </center>
+<GridPane xmlns="http://javafx.com/javafx"
+          xmlns:fx="http://javafx.com/fxml"
+          fx:controller="view.Salle"
+          prefHeight="400.0" prefWidth="600.0"
+          alignment="TOP_LEFT" style="-fx-padding: 100; -fx-background-color: #2f4f4f;">
+
+      <columnConstraints>
+         <ColumnConstraints />
+         <ColumnConstraints />
+      </columnConstraints>
+
+      <rowConstraints>
+         <RowConstraints minHeight="10.0" prefHeight="30.0" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" />
+         <RowConstraints />
+      </rowConstraints>
+
+      <children>
+         <Text> bienvenue !</Text>
+         <Button GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="bonus" text="accéder à la page de bonus" onAction="#bonus"/>
+         <Button GridPane.columnIndex="2" GridPane.rowIndex="2" fx:id="defaite" text="abandonner" onAction="#defaite"/>
+      </children>
 
 
-</BorderPane>
+</GridPane>
