--- a/code/resource/Defaite.fxml
+++ b/code/resource/Defaite.fxml
@@ -1,22 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
+
+<?import javafx.scene.layout.BorderPane?>
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="view.Defaite"
             prefHeight="400.0" prefWidth="600.0">
-
     <center>
-        <HBox>
-            <Text> Wasted </Text>
-            <Button fx:id="Restart" text="Recommencer" onAction="#Restart"/>
-        </HBox>
+        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+          <columnConstraints>
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          </columnConstraints>
+          <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+           <children>
+              <Button mnemonicParsing="false" text="Réessayer" onAction="#Restart" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                 <GridPane.margin>
+                    <Insets left="70.0" />
+                 </GridPane.margin>
+              </Button>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Wasted" GridPane.columnIndex="1">
+                 <GridPane.margin>
+                    <Insets left="90.0" />
+                 </GridPane.margin>
+              </Text>
+           </children>
+        </GridPane>
     </center>
-
 </BorderPane>
