--- a/code/resource/Salle.fxml
+++ b/code/resource/Salle.fxml
@@ -39,8 +39,8 @@
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 1" GridPane.halignment="CENTER" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 2" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 3" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 4" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 4" GridPane.halignment="CENTER"  GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </center>
