--- a/code/resource/Salle.fxml
+++ b/code/resource/Salle.fxml
@@ -7,7 +7,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.Salle">
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Label?>
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.VueSalle">
    <top>
       <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -26,36 +29,47 @@
          </children>
       </GridPane>
    </top>
+
    <center>
-      <GridPane BorderPane.alignment="TOP_CENTER">
+      <GridPane>
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 1" GridPane.halignment="CENTER" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 2" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 4" GridPane.halignment="CENTER"  GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         </children>
+
+          <VBox GridPane.columnIndex="0" alignment="CENTER">
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Joueur"/>
+          </VBox>
+
+          <VBox GridPane.columnIndex="1" alignment="CENTER">
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 1"/>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 2"/>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 3"/>
+          </VBox>
       </GridPane>
    </center>
+
    <bottom>
-      <GridPane minHeight="100.0" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <GridPane minHeight="100.0" BorderPane.alignment="CENTER"
+                style="-fx-border-style: solid; -fx-border-width: 1; -fx-border-color: black;">
+          <columnConstraints >
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+          </columnConstraints>
+          <rowConstraints>
+              <RowConstraints minHeight="50.0" prefHeight="400.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+
+          <VBox>
+              <Label fx:id="nomCarte"/>
+              <ImageView />
+              <Text/>
+          </VBox>
       </GridPane>
    </bottom>
+
 </BorderPane>
