--- a/code/resource/ListView.fxml
+++ b/code/resource/ListView.fxml
@@ -2,11 +2,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:controller="view.VueCarte" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-    <ListView fx:id="listView" GridPane.columnIndex="0" GridPane.rowIndex="0" maxWidth="450" prefWidth="450" orientation="HORIZONTAL"
-    onMouseClicked="#handleMouseClick">
-        <cellFactory>
-            <TaskCellFactory/>
-        </cellFactory>
-    </ListView>
+<?import javafx.geometry.Insets?>
+<GridPane fx:controller="view.VueCarte" xmlns:fx="http://javafx.com/fxml" alignment="center">
+    <padding><Insets top="25" right="25" bottom="25" left="25"/></padding>
+    <children>
+            <ListView fx:id="listView" GridPane.columnIndex="0" GridPane.rowIndex="0" orientation="HORIZONTAL"
+            onMouseClicked="#handleMouseClick" minWidth="945">
+                <cellFactory>
+                    <TaskCellFactory/>
+                </cellFactory>
+            </ListView>
+    </children>
 </GridPane>
