[DEV] Mise en place des images joueur et Monstre + Utilisation des cartes fonctionnel

--- a/code/resource/Salle.fxml
+++ b/code/resource/Salle.fxml
@@ -10,6 +10,7 @@
 <?import javafx.geometry.Insets?>
 <?import view.TaskCellFactory?>
 
+<?import javafx.scene.image.ImageView?>
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SalleController">
    <top>
       <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
@@ -31,7 +32,7 @@
    </top>
 
    <center>
-      <GridPane>
+      <GridPane fx:id="terrain">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -40,14 +41,21 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
 
-          <VBox GridPane.columnIndex="0" alignment="CENTER">
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Joueur"/>
+          <ImageView fx:id="hero" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+
+          </ImageView>
+
+          <VBox GridPane.columnIndex="0" GridPane.rowIndex="1" alignment="CENTER" fx:id="ptsdevie" >
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Points de vies" fx:id="vie" />
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Pts de vie" fx:id="vietot"/>
           </VBox>
 
-          <VBox GridPane.columnIndex="1" alignment="CENTER">
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 1"/>
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 2"/>
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Monstre 3"/>
+          <ImageView fx:id="monstre" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+
+          </ImageView>
+
+          <VBox GridPane.columnIndex="1" GridPane.rowIndex="1" alignment="CENTER">
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Pts de vie" fx:id="vieMonstre"/>
           </VBox>
       </GridPane>
    </center>
