--- a/code/resource/Salle.fxml
+++ b/code/resource/Salle.fxml
@@ -11,6 +11,7 @@
 <?import view.TaskCellFactory?>
 
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SalleController">
    <top>
       <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
@@ -41,20 +42,22 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
 
-          <ImageView fx:id="hero" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-
-          </ImageView>
-
           <VBox GridPane.columnIndex="0" GridPane.rowIndex="1" alignment="CENTER" fx:id="ptsdevie" >
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Points de vies" fx:id="vie" />
-              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Pts de vie" fx:id="vietot"/>
+              <ImageView fx:id="hero" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+
+              </ImageView>
+              <HBox alignment="CENTER">
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Points de vies" fx:id="vie" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="/"/>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Pts de vie" fx:id="vietot"/>
+              </HBox>
           </VBox>
 
-          <ImageView fx:id="monstre" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-
-          </ImageView>
 
           <VBox GridPane.columnIndex="1" GridPane.rowIndex="1" alignment="CENTER">
+              <ImageView fx:id="monstre" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+
+              </ImageView>
               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Pts de vie" fx:id="vieMonstre"/>
           </VBox>
       </GridPane>
