--- a/code/resource/Bonus.fxml
+++ b/code/resource/Bonus.fxml
@@ -8,29 +8,28 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.BonusController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="193.0" minHeight="10.0" prefHeight="108.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="292.0" minHeight="10.0" prefHeight="292.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <HBox alignment="CENTER" prefHeight="370.0" prefWidth="600.0" GridPane.rowIndex="1">
-         <children>
-            <Button fx:id="VieMax" onAction="#VieMax" text="Vie Max +" />
-            <Button fx:id="Regen" onAction="#Regen" text="Régénération Santé" />
-            <Button fx:id="Degats" onAction="#Degats" text="Dégats +" />
-         </children>
-         <GridPane.margin>
-            <Insets bottom="30.0" />
-         </GridPane.margin>
-      </HBox>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Vous avez droit à un bonus !" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-      </Text>
-   </children>
+<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+          prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.BonusController">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="193.0" minHeight="10.0" prefHeight="108.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="292.0" minHeight="10.0" prefHeight="292.0" vgrow="SOMETIMES"/>
+    </rowConstraints>
+    <HBox alignment="CENTER" prefHeight="370.0" prefWidth="600.0" GridPane.rowIndex="1">
+        <GridPane.margin>
+            <Insets bottom="30.0"/>
+        </GridPane.margin>
+        <Button fx:id="VieMax" onAction="#VieMax" text="Vie Max +"/>
+        <Button fx:id="Regen" onAction="#Regen" text="Régénération Santé"/>
+        <Button fx:id="Degats" onAction="#Degats" text="Dégats +"/>
+    </HBox>
+    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Vous avez droit à un bonus !" textAlignment="CENTER"
+          GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+        <GridPane.margin>
+          <Insets/>
+        </GridPane.margin>
+    </Text>
 </GridPane>
