--- a/code/resource/Salle.fxml
+++ b/code/resource/Salle.fxml
@@ -15,21 +15,21 @@
 
 <BorderPane fx:id="pane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SalleController">
    <top>
-      <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-             <Button fx:id="defaite" alignment="TOP_RIGHT" contentDisplay="RIGHT" onAction="#defaite" text="Abandonner" textAlignment="RIGHT" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
-             <Button fx:id="Sauvegarde" alignment="TOP_LEFT" contentDisplay="RIGHT" onAction="#sauvegarde" text="Sauvegarder" textAlignment="RIGHT" GridPane.columnIndex="0" GridPane.halignment="LEFT" />
-         </children>
-      </GridPane>
+       <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
+           <columnConstraints>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+           </columnConstraints>
+           <rowConstraints>
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+           </rowConstraints>
+           <Button fx:id="defaite" alignment="TOP_RIGHT" contentDisplay="RIGHT" onAction="#defaite" text="Abandonner"
+                   textAlignment="RIGHT" GridPane.columnIndex="2" GridPane.halignment="RIGHT"/>
+           <Button fx:id="Sauvegarde" alignment="TOP_LEFT" contentDisplay="RIGHT" onAction="#sauvegarde"
+                   text="Sauvegarder" textAlignment="RIGHT" GridPane.columnIndex="0" GridPane.halignment="LEFT"/>
+       </GridPane>
    </top>
 
    <center>
@@ -63,19 +63,19 @@
 
    <bottom>
        <GridPane xmlns:fx="http://javafx.com/fxml" alignment="center">
-           <padding><Insets top="25" right="25" bottom="25" left="25"/></padding>
-           <children>
-               <ListView fx:id="deckListView" GridPane.columnIndex="0" GridPane.rowIndex="0" orientation="HORIZONTAL"
-                         onMouseClicked="#handleMouseClick" minWidth="950" >
-                   <cellFactory>
-                       <TaskCellFactory/>
-                   </cellFactory>
-               </ListView>
-           </children>
+           <padding>
+               <Insets top="25" right="25" bottom="25" left="25"/>
+           </padding>
+           <ListView fx:id="deckListView" GridPane.columnIndex="0" GridPane.rowIndex="0" orientation="HORIZONTAL"
+                     onMouseClicked="#handleMouseClick" minWidth="950">
+               <cellFactory>
+                   <TaskCellFactory/>
+               </cellFactory>
+           </ListView>
        </GridPane>
    </bottom>
 
     <stylesheets>
-        <URL value="@style.css" />
+        <URL value="@Style.css" />
     </stylesheets>
 </BorderPane>
